--- a/src/module/reward/reward.html
+++ b/src/module/reward/reward.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-  <meta charset="utf-8">
-  <title>detail</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <meta name="screen-orientation" content="portrait" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="full-screen" content="yes">
+    <title>打赏榜</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/weui.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/weuix.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/ranking.css">
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src='../../static/js/rem.js'></script>
+    <script type="text/javascript" src='../../static/js/zepto.min.js'></script>
+    <script type="text/javascript" src='../../static/js/lazyimg.js'></script>
+    <script type="text/javascript" src='../../static/js/common.js'></script>
 </head>
-<body>
+<body ontouchstart>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
