--- a/src/module/staffDetail/staffDetail.html
+++ b/src/module/staffDetail/staffDetail.html
@@ -19,6 +19,23 @@
     <script type="text/javascript" src='../../static/js/picker.js'></script>
     <script type="text/javascript" src='../../static/js/swipe.js'></script>
     <script type="text/javascript" src='../../static/js/common.js'></script>
+    <script>
+      $(function(){
+            $('#slide').swipeSlide({
+            autoSwipe:true,//自动切换默认是
+            speed:3000,//速度默认4000
+            continuousScroll:true,//默认否
+            transitionType:'cubic-bezier(0.22, 0.69, 0.72, 0.88)',//过渡动画linear/ease/ease-in/ease-out/ease-in-out/cubic-bezier
+            lazyLoad:true,//懒加载默认否
+            firstCallback : function(i,sum,me){
+            me.find('.dot').children().first().addClass('cur');
+          },
+          callback : function(i,sum,me){
+            me.find('.dot').children().eq(i).addClass('cur').siblings().removeClass('cur');
+          }
+            });
+        });    
+    </script>
 </head>
 <body ontouchstart>
 <div id="app"></div>
