--- a/src/module/dating/dating.html
+++ b/src/module/dating/dating.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>约单</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
@@ -18,10 +19,9 @@
     <script type="text/javascript" src='../static/js/rem.js'></script>
     <script type="text/javascript" src="../static/js/vue.min.js"></script>
 	<script type="text/javascript" src='../static/js/zepto.min.js'></script>
-    <script type="text/javascript" src='../static/js/iscroll.js'></script>
     <script type="text/javascript" src='../static/js/lazyimg.js'></script>
     <script type="text/javascript" src='../static/js/common.js'></script>
-    
+    <script type="text/javascript" src="../static/js/vue-infinite-loading.js"></script>
 </head>
 <body ontouchstart>
 <div id="app"></div>
