--- a/src/module/protocol/protocol.html
+++ b/src/module/protocol/protocol.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>用户条款及协议</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
