--- a/src/module/aboutus/aboutus.html
+++ b/src/module/aboutus/aboutus.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>关于我们</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
@@ -20,7 +21,7 @@
     <script type="text/javascript" src='../static/js/common.js'></script>
 </head>
 <body ontouchstart>
-<div id="app"></div>
+<div id="app" style="background-color: #fff;"></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
