--- a/src/module/certification/certification.html
+++ b/src/module/certification/certification.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>员工认证</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
@@ -22,7 +23,6 @@
     <script type="text/javascript" src='../static/js/zepto.min.js'></script>
     <script type="text/javascript" src='../static/js/picker.js'></script>
     <script type="text/javascript" src='../static/js/common.js'></script>
-    
     <script type="text/javascript" src="../static/js/city.js"></script>
 </head>
 <body ontouchstart>
