--- a/src/module/explain/explain.html
+++ b/src/module/explain/explain.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>我的账户</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
@@ -21,7 +22,7 @@
     
 </head>
 <body ontouchstart>
-<div id="app"></div>
+<div id="app" style="background-color: #fff;"></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
