--- a/src/module/recharge/recharge.html
+++ b/src/module/recharge/recharge.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>充值</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
@@ -19,7 +20,6 @@
     <script type="text/javascript" src="../static/js/vue.min.js"></script>
     <script type="text/javascript" src='../static/js/zepto.min.js'></script>
     <script type="text/javascript" src='../static/js/common.js'></script>
-    
 </head>
 <body ontouchstart>
 <div id="app"></div>
