--- a/src/module/search/search.html
+++ b/src/module/search/search.html
@@ -8,19 +8,19 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta http-equiv="Cache-Control" content="no-cache" />
-    <title>首页</title>
+    <title>搜索</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
     <link rel="stylesheet" type="text/css" href="../static/css/weui.css">
     <link rel="stylesheet" type="text/css" href="../static/css/weuix.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/home.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/dating.css">
     <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src='../static/js/sha1.js'></script>
     <script type="text/javascript" src='../static/js/rem.js'></script>
     <script type="text/javascript" src="../static/js/vue.min.js"></script>
 	<script type="text/javascript" src='../static/js/zepto.min.js'></script>
-  	<script type="text/javascript" src='../static/js/lazyimg.js'></script>
-  	<script type="text/javascript" src='../static/js/common.js'></script>
+    <script type="text/javascript" src='../static/js/lazyimg.js'></script>
+    <script type="text/javascript" src='../static/js/common.js'></script>
     <script type="text/javascript" src="../static/js/vue-infinite-loading.js"></script>
 </head>
 <body ontouchstart>
