--- a/src/module/test/test.html
+++ b/src/module/test/test.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <title>全部订单</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
     <link rel="stylesheet" type="text/css" href="../static/css/base.css">
@@ -14,13 +15,12 @@
     <link rel="stylesheet" type="text/css" href="../static/css/weuix.css">
     <link rel="stylesheet" type="text/css" href="../static/css/orderList.css">
     <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src='../static/js/sha1.js'></script>
     <script type="text/javascript" src='../static/js/rem.js'></script>
     <script type="text/javascript" src="../static/js/vue.min.js"></script>
     <script type="text/javascript" src='../static/js/zepto.min.js'></script>
     <script type="text/javascript" src='../static/js/lazyimg.js'></script>
     <script type="text/javascript" src='../static/js/common.js'></script>
-
-    <script type="text/javascript" src="../static/js/qiniu.min.js"></script>
     
 </head>
 <body ontouchstart>
