--- a/src/module/protocol/protocol.html
+++ b/src/module/protocol/protocol.html
@@ -9,16 +9,16 @@
     <meta name="full-screen" content="yes">
     <meta http-equiv="Cache-Control" content="no-cache" />
     <title>用户条款及协议</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/weui.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/weuix.css">
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src='../static/js/sha1.js'></script>
-    <script type="text/javascript" src='../static/js/rem.js'></script>
-    <script type="text/javascript" src="../static/js/vue.min.js"></script>
-    <script type="text/javascript" src='../static/js/zepto.min.js'></script>
-    <script type="text/javascript" src='../static/js/common.js'></script>
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css?t=201711021318">
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css?t=201711021318">
+    <link rel="stylesheet" type="text/css" href="../static/css/weui.css?t=201711021318">
+    <link rel="stylesheet" type="text/css" href="../static/css/weuix.css?t=201711021318">
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js?t=201711021318"></script>
+    <script type="text/javascript" src='../static/js/sha1.js?t=201711021318'></script>
+    <script type="text/javascript" src='../static/js/rem.js?t=201711021318'></script>
+    <script type="text/javascript" src="../static/js/vue.min.js?t=201711021318"></script>
+    <script type="text/javascript" src='../static/js/zepto.min.js?t=201711021318'></script>
+    <script type="text/javascript" src='../static/js/common.js?t=201711021318'></script>
     
 </head>
 <body ontouchstart>
