--- a/src/module/reward/reward.html
+++ b/src/module/reward/reward.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta name="screen-orientation" content="portrait" />
+    <meta name="x5-orientation" content="portrait">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="expires" content="0">
     <title>打赏榜</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css?t=201711021318">
-    <link rel="stylesheet" type="text/css" href="../static/css/base.css?t=201711021318">
-    <link rel="stylesheet" type="text/css" href="../static/css/weui.css?t=201711021318">
-    <link rel="stylesheet" type="text/css" href="../static/css/weuix.css?t=201711021318">
-    <link rel="stylesheet" type="text/css" href="../static/css/ranking.css?t=201711021318">
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js?t=201711021318"></script>
-    <script type="text/javascript" src='../static/js/sha1.js?t=201711021318'></script>
-    <script type="text/javascript" src='../static/js/rem.js?t=201711021318'></script>
-    <script type="text/javascript" src="../static/js/vue.min.js?t=201711021318"></script>
-    <script type="text/javascript" src='../static/js/zepto.min.js?t=201711021318'></script>
-    <script type="text/javascript" src='../static/js/lazyimg.js?t=201711021318'></script>
-    <script type="text/javascript" src='../static/js/common.js?t=201711021318'></script>
-    
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/weui.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/weuix.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/ranking.css">
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src='../static/js/sha1.js'></script>
+    <script type="text/javascript" src='../static/js/rem.js'></script>
+    <script type="text/javascript" src="../static/js/vue.min.js"></script>
+    <script type="text/javascript" src='../static/js/zepto.min.js'></script>
+    <script type="text/javascript" src='../static/js/lazyimg.js'></script>
+    <script type="text/javascript" src='../static/js/common.js'></script>
 </head>
 <body ontouchstart>
 <div id="app"></div>
