--- a/src/module/index.html
+++ b/src/module/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js?t=201711021318"></script>
-    <script type="text/javascript" src='../static/js/sha1.js?t=201711021318'></script>
-    <script type="text/javascript" src='../static/js/zepto.min.js?t=201711021318'></script>
-    <script type="text/javascript" src="../static/js/common.js?t=201711021318"></script>
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src='../static/js/sha1.js'></script>
+    <script type="text/javascript" src='../static/js/zepto.min.js'></script>
+    <script type="text/javascript" src="../static/js/common.js"></script>
     <script type="text/javascript">
       // window.location.href = 'module/index.html';
     </script>
