--- a/src/module/index/index.html
+++ b/src/module/index/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="expires" content="0">
     <title>首页</title>
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css?12">
     <link rel="stylesheet" type="text/css" href="../static/css/weui.css">
     <link rel="stylesheet" type="text/css" href="../static/css/weuix.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/home.css">
@@ -27,7 +27,7 @@
   	<script type="text/javascript" src='../static/js/common.js'></script>
     <script type="text/javascript" src="../static/js/vue-infinite-loading.js"></script>
 </head>
-<body ontouchstart>
+<body>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
