--- a/src/module/orderDetail/orderDetail.html
+++ b/src/module/orderDetail/orderDetail.html
@@ -23,7 +23,8 @@
     <script type="text/javascript" src="../static/js/vue.min.js"></script>
     <script type="text/javascript" src='../static/js/zepto.min.js'></script>
     <script type="text/javascript" src='../static/js/picker.js'></script>
-    <script type="text/javascript" src='../static/js/common.js'></script>
+    <script type="text/javascript" src='../static/js/common.js'></script>2
+    <script type="text/javascript" src="../static/js/vue-infinite-loading.js"></script>
 </head>
 <body ontouchstart>
 <div id="app"></div>
