--- a/src/module/userOrder/userOrder.html
+++ b/src/module/userOrder/userOrder.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src='../static/js/zepto.min.js'></script>
     <script type="text/javascript" src='../static/js/lazyimg.js'></script>
     <script type="text/javascript" src='../static/js/common.js'></script>
+    <script type="text/javascript" src="../static/js/vue-infinite-loading.js"></script>
 </head>
 <body ontouchstart>
 <div id="app"></div>
