--- a/src/module/predate/predate.html
+++ b/src/module/predate/predate.html
@@ -12,19 +12,19 @@
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="expires" content="0">
     <title>约单</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/weui.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/weuix.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/staffDetail.css">
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src='../static/js/sha1.js'></script>
-    <script type="text/javascript" src='../static/js/rem.js'></script>
-    <script type="text/javascript" src="../static/js/vue.min.js"></script>
-    <script type="text/javascript" src='../static/js/zepto.min.js'></script>
-    <script type="text/javascript" src='../static/js/picker.js'></script>
-    <script type="text/javascript" src='../static/js/common.js'></script>
-    <script type="text/javascript" src="../static/js/vue-infinite-loading.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css?t=201712121002">
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css?t=201712121002">
+    <link rel="stylesheet" type="text/css" href="../static/css/weui.css?t=201712121002">
+    <link rel="stylesheet" type="text/css" href="../static/css/weuix.css?t=201712121002">
+    <link rel="stylesheet" type="text/css" href="../static/css/staffDetail.css?t=201712121002">
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js?t=201712121002"></script>
+    <script type="text/javascript" src='../static/js/sha1.js?t=201712121002'></script>
+    <script type="text/javascript" src='../static/js/rem.js?t=201712121002'></script>
+    <script type="text/javascript" src="../static/js/vue.min.js?t=201712121002"></script>
+    <script type="text/javascript" src='../static/js/zepto.min.js?t=201712121002'></script>
+    <script type="text/javascript" src='../static/js/picker.js?t=201712121002'></script>
+    <script type="text/javascript" src='../static/js/common.js?t=201712121002'></script>
+    <script type="text/javascript" src="../static/js/vue-infinite-loading.js?t=201712121002"></script>
 </head>
 <body ontouchstart>
 <div id="app"></div>
